helm/sonarqube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-service
  namespace: devops-tools
  annotations:
spec:
  selector: 
    app: sonarqube
  type: LoadBalancer  
  ports:
    - port: 80
      targetPort: 80
